gcc/testsuite/g++.dg/parse/template-keyword1.C
// PR c++/81257

template < typename ::template A < int > >; // { dg-error "" }
